# app/core/models/common.go
@@ -1,0 +1,9 @@
+package models
+
+type (
+	ErrorResponse struct {
+		FailedField string
+		Tag         string
+		Value       string
+	}
+)
