# app/core/models/seller.go
@@ -1,0 +1,14 @@
+package models
+
+type (
+	SellerCreateReq struct {
+		TaxId string `json:"taxId" validate:"required"`
+		Name  string `json:"name" validate:"required"`
+	}
+
+	SellerCreateRes struct {
+		SellerId string
+		TaxId    string
+		Name     string
+	}
+)
